--- a/src/App.css
+++ b/src/App.css
@@ -53,14 +53,24 @@ button.Episode-One {
   outline: none;
 }
 
-button.Episode-One:hover {
+button.Episode-One:hover, button.Episode-One:focus {
   background-color: black;
   border: 3px solid transparent;
   color: gold;
 }
 
-button.Episode-One:focus {
-  background-color: black;
-  border: 3px solid transparent;
-  color: gold;
+input[type="checkbox"].Episode-One {
+  content: '';
+  outline: none;
+  border: 3px solid black;
+  border-radius: 5px;
+  margin: 10px;
+  height: 25px; 
+  width: 25px;
+  position: relative;
+  top: 8px;
+}
+
+input[type="checkbox"].Episode-One:focus {
+  outline: gold solid 1px;
 }
