--- a/src/App.css
+++ b/src/App.css
@@ -42,6 +42,7 @@
 }
 
 button.Episode {
+  font-weight: bold;
   font-size: medium;
   background-color: transparent;
   border: 3px solid black;
@@ -55,8 +56,8 @@ button.Episode {
 }
 
 button.Episode-Two {
-  background-color: darkmagenta;
-  opacity: 75%;
+  background-color: rgb(0, 100, 80);
+  opacity: 0.75;
 }
 
 button.Episode-One:hover, button.Episode-One:focus {
@@ -80,7 +81,7 @@ button.Episode-Four {
   color: pink;
   background-color: darkred;
   border: 3px solid pink;
-  opacity: 75%;
+  opacity: 0.75;
 }
 
 button.Episode-Four:hover, button.Episode-Four:focus {
@@ -109,7 +110,7 @@ input[type="text"].Episode-Two {
   margin: 8px;
   border: 3px solid black;
   background-color: darkmagenta;
-  opacity: 75%;
+  opacity: 0.75;
   font-size: 18px;
   outline: none;
 }
