--- a/src/episode5/phaeton/FlappyPhaeton.css
+++ b/src/episode5/phaeton/FlappyPhaeton.css
@@ -45,17 +45,26 @@
 .obstacle {
     width: 50px;
     position: absolute;
-    background-color: transparent;
-    border: 3px solid black;
+    background-color: black;
 }
 
 .obstacle-text {
-    font-size: medium;
+    color: white;
+    font-size: x-large;
     font-weight: bold;
     transform: rotate(-90deg);
+    white-space: nowrap;
 }
 
 .obstacle-container {
     position: absolute;
     top: 0px;
+}
+
+.score {
+    position: fixed;
+    left: 50%;
+    color: rgb(255, 115, 0);
+    font-size: 3rem;
+    font-weight: bolder;
 }
