--- a/src/hub/hub.css
+++ b/src/hub/hub.css
@@ -23,17 +23,27 @@
     height: 40vh;
 }
 
+.Ep-Title {
+    transform: rotate(-90deg);
+    color: white;
+    font-size: 7vh;
+    margin: -20vh;
+    margin-top: -22vh;
+    font-weight: lighter;
+}
+
 .Ep-2 {
     margin-top: 3vh;
     height: 60vh;
 }
 
 .Ep-3-Container {
-    display: flex;
-    flex-direction: column;
+    display: block;
 }
 
 .Ep-3 {
+    position: relative;
+    top: 6vh;
     margin-left: 0vh;
     margin-top: 0vh;
     height: 45vh;
@@ -41,15 +51,16 @@
 
 .Ep-3-Text {
     transform: rotate(-90deg);
-    margin-left: -10.5vh;
-    margin-top: 23vh;
-    margin-bottom: 11vh;
+    margin-left: -10vh;
+    margin-top: 22vh;
+    margin-bottom: 5vh;
     color: #fff;
     flex: 0.5 0.5;
     width: 30vh;
     text-align: left;
     font-size: 4.4vh;
     font-weight: lighter;
+    line-height: 1.2;
 }
 
 .Ep-4 {
@@ -58,8 +69,7 @@
 }
 
 .Ep-5-Container {
-    display: flex;
-    flex-direction: column;
+    display: block;
 }
 
 .Ep-5 {
@@ -69,6 +79,8 @@
 }
 
 .Ep-5-Text {
+    position: fixed;
+    top: 46vh;
     transform: rotate(-90deg);
     color: #fff;
     text-align: right;
@@ -83,4 +95,41 @@
 .Ep-6 {
     margin-top: 30vh;
     height: 55vh;
+}
+
+.Additional-Credits {
+    position: fixed;
+    top: 90%;
+    margin-left: 2vw;
+    color: white;
+    text-align: left;
+    font-weight: lighter;
+    font-size: 2vh;
+}
+
+.Materialize {
+    animation-name: materialize;
+    animation-duration: 1.5s;
+}
+
+@keyframes materialize {
+    from {
+        opacity: 0%;
+    } to {
+        opacity: 100%;
+    }
+}
+
+.Dematerialize {
+    opacity: 0%;
+    animation-name: dematerialize;
+    animation-duration: 2s;
+}
+
+@keyframes dematerialize {
+    from {
+        opacity: 100%;
+    } to {
+        opacity: 0%;
+    }
 }
