--- a/src/App.css
+++ b/src/App.css
@@ -37,13 +37,26 @@
   }
 }
 
+.iframe-container {
+  overflow: hidden;
+  padding-top: 56.25%;
+  position: relative;
+}
+
+.iframe-container iframe {
+  height: 100%;
+  left: 0;
+  position: absolute;
+  top: 0;
+}
+
 .Episode-One {
   color: gold;
 }
 
 button.Episode {
   font-weight: bold;
-  font-size: 2vmax;
+  font-size: min(3vmax, 1.5rem);
   background-color: transparent;
   border: 3px solid black;
   color: black;
@@ -55,15 +68,26 @@ button.Episode {
   outline: none;
 }
 
+button.Episode-One:hover, button.Episode-One:focus {
+  background-color: black;
+  border: 3px solid transparent;
+  color: gold;
+}
+
 button.Episode-Two {
   /* background-color: rgb(0, 100, 80); */
   opacity: 0.75;
 }
 
-button.Episode-One:hover, button.Episode-One:focus {
-  background-color: black;
-  border: 3px solid transparent;
-  color: gold;
+input[type="text"].Episode-Two {
+  color: black;
+  padding: 8px 16px;
+  margin: 8px;
+  border: 3px solid black;
+  background-color: transparent;
+  opacity: 0.75;
+  font-size: 18px;
+  outline: none;
 }
 
 button.Episode-Two:hover, button.Episode-Two:focus, input[type="text"].Episode-Two:hover, input[type="text"].Episode-Two:focus {
@@ -108,17 +132,6 @@ button.Episode-Six:hover, button.Episode-Six:focus {
 
 ::placeholder {
   color: black;
-}
-
-input[type="text"].Episode-Two {
-  color: black;
-  padding: 8px 16px;
-  margin: 8px;
-  border: 3px solid black;
-  background-color: darkmagenta;
-  opacity: 0.75;
-  font-size: 18px;
-  outline: none;
 }
  
 input[type="checkbox"] {
