--- a/src/program/program.css
+++ b/src/program/program.css
@@ -1,7 +1,6 @@
 .Program-Container {
     background-image: url("../assets/hub/background.png");
     min-height: 100vh;
-    max-height: 115vh;
     background-position: center;
     background-repeat: repeat;
     background-size: cover;
@@ -11,11 +10,10 @@
 .Program-Content {
     color: white;
     position: absolute;
-    margin-top: 15vh;
-    left: 10%;
-    /* margin-left: -40vw; */
+    margin-top: 10vh;
+    left: 50%;
+    margin-left: max(-40vw, -400px);
     width: 80vw;
-    margin-bottom: 10vh;
     display: block;
 }
 
@@ -41,9 +39,7 @@
 
 .Director-Note {
     max-width: 800px;
-    outline: 2px white solid;
-    padding: 1vmin;
-    padding-bottom: 10vh;
+    margin-bottom: 10vh;
 }
 
 .Director-Note-Title {
@@ -64,8 +60,6 @@
 
 .Playwright {
     max-width: 690px;
-    outline: 2px white solid;
-    padding: 1vmin
 }
 
 .Playwright-Title {
@@ -91,16 +85,63 @@
 }
 
 .Playwright-Body {
-    margin: 2vmin;
+    margin-left: 1vmin;
+    margin-right: 1vmin;
     text-align: left;
     font-size: min(2.1vmin, 2rem);
 }
 
 .Credits {
-    max-width: 600px;
+    max-width: 800px;
+}
+
+.Credits-Text-Smaller {
+    font-size: min(2vmin, 1rem);
+    font-weight: lighter;
+}
+
+.Credits-Text-Small {
+    font-size: min(1.9vmin, 1rem);
+    margin-top: -2vmin;
+}
+
+.Credits-Text-Medium {
+    font-size: min(3.5vmin, 1.2rem);
+}
+
+.Credits-Text-Large {
+    font-size: min(4vmin, 1.7rem);
+    margin-bottom: 2vmin;
+}
+
+.Credits-Text-Larger {
+    font-size: min(5vmin, 2.7rem);
+    line-height: 1;
+    margin-top: 0;
+    margin-bottom: 3px;
+}
+
+.Credits-Text-Largest {
+    font-size: min(8vmin, 5rem);
+    line-height: 1;
+    margin-bottom: 0;
+    margin-top: 5px;
 }
 
 .Credits-Columns {
     max-width: 600px;
     display: inline-flex;
+}
+
+.Credits-Column {
+    width: 30vw;
+    max-width: 250px;
+    min-width: 100px;
+    margin-left: min(1vw, 25px);
+    margin-right: min(1vw, 25px);
+}
+
+.Credits-Column-Row {
+    min-height: 42px;
+    margin-top: 0vmin;
 }
