connected ep2 to database and created nightmares page, also created login page for password requirement

--- a/src/episode1/css/answers.css
+++ b/src/episode1/css/answers.css
@@ -2,7 +2,7 @@
 button.Answers-Exit {
     top: 3vmin;
     left: 3vmin;
-    width: 25vw;
+    width: min(25vw, 225px);
     position: absolute;
     font-size: min(3vmin, 1.5rem);
 }
