changes based on program

--- a/src/program/program.css
+++ b/src/program/program.css
@@ -49,7 +49,7 @@
 
 .Director-Note-Body {
     text-align: left;
-    font-size: min(1.9vmax, 1.5rem);
+    font-size: min(1.5vmax, 1.2rem);
 }
 
 .Director-Note-Footer {
@@ -72,12 +72,13 @@
 }
 
 .Playwright-Photo {
-    width: 37vmin;
-    height: 37vmin;
-    max-width: 365px;
-    max-height: 365px;
-    outline: 2px white solid;
+    width: 127vmin;
+    height: 29vmin;
+    max-width: 223px;
+    max-height: 272px;
+    /* outline: 2px white solid; */
     margin-right: 2vmin;
+    object-fit: contain;
 }
 
 .Playwright-Photo-Text {
@@ -106,15 +107,18 @@
 }
 
 .Credits-Text-Medium {
+    font-weight: lighter;
     font-size: min(3.5vmin, 1.2rem);
 }
 
 .Credits-Text-Large {
+    font-weight: lighter;
     font-size: min(4vmin, 1.7rem);
     margin-bottom: 2vmin;
 }
 
 .Credits-Text-Larger {
+    font-weight: lighter;
     font-size: min(5vmin, 2.7rem);
     line-height: 1;
     margin-top: 0;
@@ -122,6 +126,7 @@
 }
 
 .Credits-Text-Largest {
+    font-weight: lighter;
     font-size: min(8vmin, 5rem);
     line-height: 1;
     margin-bottom: 0;
