--- a/src/episode3/underworld/sisyphus/sisyphus.css
+++ b/src/episode3/underworld/sisyphus/sisyphus.css
@@ -14,7 +14,7 @@
 
     max-height: 500px;
     height: 71.4vmin;
-    min-width: 214.3px;
+    min-height: 214.3px;
 
     border: 2px solid black;
     outline: none;
