--- a/src/episode3/underworld/underworld.css
+++ b/src/episode3/underworld/underworld.css
@@ -1,5 +1,5 @@
 button.Underworld-Selection-Button {
-    font-size: min(2.5vmax, 1.25rem);
+    font-size: min(2.5vmin, 1.25rem);
     color: beige;
     border: 3px solid beige;
 }
