--- a/src/episode1/css/answers.css
+++ b/src/episode1/css/answers.css
@@ -19,16 +19,16 @@ button.Answer-Nav {
 
 .Answers-Container {
     margin: 10vmin;
+    margin-left: 25vw;
+    width: 50vw;
 }
 
 .Question {
     font-weight: bold;
     font-size: min(4vmin, 1.5rem);
-    max-width: 85vw;
 }
 
 .Answer {
     font-size: min(4.5vmin, 1.25rem);
     word-wrap: break-word;
-    max-width: 85vw;
 }
