--- a/src/episode5/phaeton/FlappyPhaeton.css
+++ b/src/episode5/phaeton/FlappyPhaeton.css
@@ -23,10 +23,10 @@
 }
 
 .bird {
-    background-color: black;
+    /* background-color: black; */
     position: absolute;
-    width: 20px;
-    height:  20px;
+    width: 60px;
+    /* height:  40px; */
 }
 
 .game-overlay {
@@ -45,15 +45,29 @@
 .obstacle {
     width: 50px;
     position: absolute;
-    background-color: black;
+    overflow: hidden;
+    /* background-image: url("../../assets/phaeton/pillar_detail.svg"); */
+    /* background-color: black; */
 }
 
 .obstacle-text {
+    position: absolute;
     color: white;
     font-size: x-large;
     font-weight: bold;
     transform: rotate(-90deg);
     white-space: nowrap;
+}
+
+.obstacle-image {
+    position: absolute;
+    left: 0;
+    background: url("../../assets/phaeton/pillar_plain.svg");
+    width: 50px;
+    background-repeat: repeat-y;
+    background-size: cover;
+    height: 100%;
+    /* object-fit: cover; */
 }
 
 .obstacle-container {
@@ -64,9 +78,10 @@
 .score {
     display: block;
     position: fixed;
-    top: 10%;
-    width: 30%;
-    left: 34%;
+    top: 3vh;
+    width: 300px;
+    left: 50%;
+    margin-left: -150px;
     color: rgb(255, 115, 0);
     font-size: 2rem;
     font-weight: bolder;
